--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <nav>
             <div class="container mx-auto">
                 <div class="navbar flex justify-between">
-                    <div class="navbar-start">
+                    <div class="navbar-start items-center">
                         <div class="dropdown">
                             <label tabindex="0"
                                 class="btn bg-gradient-to-r from-red-color to-yellow-color border-none hover:bg-transparent text-white lg:hidden">
@@ -75,7 +75,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <a class="btn bg-transparent border-none hover:bg-transparent text-xl uppercase"><span
+                        <a class="btn bg-transparent border-none hover:bg-transparent md:text-3xl uppercase font-bold"><span
                                 class="text-red-color">Tea</span>
                             House</a>
                     </div>
