feature product complete with responsive

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </style>
 </head>
 
-<body class="font-manrope p-2 md:p-0">
+<body class="font-manrope pt-2 md:pt-0 px-3 md:px-0">
     <!-- header section -->
     <header>
         <!-- navbar start-->
@@ -143,7 +143,51 @@
     </header>
 
     <main>
+        <!-- feature products start -->
+        <section class="py-20">
+            <div class="container mx-auto">
+                <div class="text-center flex flex-col gap-5 items-center justify-center py-4">
+                    <h2 class="text-dark-color text-4xl font-extrabold">Our Featured Products</h2>
+                    <p class="lg:px-52 text-base text-dark-light leading-7">There are many variations of passages of
+                        Lorem
+                        Ipsum available, but the majority have suffered alteration in some form, by injected humour, or
+                        randomised words which don't look even slightly believable. </p>
+                </div>
 
+                <div class="mt-9 grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+                    <div class="card text-center bg-gradient-to-t from-white to-[#F4F4F4] shadow-lg p-7">
+                        <figure><img src="./img/tea-1.png" alt="Shoes" /></figure>
+                        <div class="card-body flex ">
+                            <h2 class="card-title justify-center">Milk Tea</h2>
+                            <p class="text-center">Creamer could be replaced by fresh milk</p>
+                        </div>
+                    </div>
+                    <div class="card text-center bg-gradient-to-t from-white to-[#F4F4F4] shadow-lg p-7">
+                        <figure><img src="./img/tea-2.png" alt="Shoes" /></figure>
+                        <div class="card-body flex ">
+                            <h2 class="card-title justify-center">Black Tea</h2>
+                            <p class="text-center">Creamer could be replaced by fresh milk</p>
+                        </div>
+                    </div>
+                    <div class="card text-center bg-gradient-to-t from-white to-[#F4F4F4] shadow-lg p-7">
+                        <figure><img src="./img/tea-3.png" alt="Shoes" /></figure>
+                        <div class="card-body flex ">
+                            <h2 class="card-title justify-center">Lemon Tea</h2>
+                            <p class="text-center">Creamer could be replaced by fresh milk</p>
+                        </div>
+                    </div>
+                    <div class="card text-center bg-gradient-to-t from-white to-[#F4F4F4] shadow-lg p-7">
+                        <figure><img src="./img/tea-4.png" alt="Shoes" /></figure>
+                        <div class="card-body flex ">
+                            <h2 class="card-title justify-center">Green Tea</h2>
+                            <p class="text-center">Creamer could be replaced by fresh milk</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!-- feature products end -->
     </main>
 
     <footer>
