great time section complete with responsive

--- a/index.html
+++ b/index.html
@@ -188,6 +188,56 @@
 
         </section>
         <!-- feature products end -->
+
+        <!-- great tea start -->
+        <section class="py-20 px-3 lg:px-0">
+            <div class="container mx-auto">
+                <div class="flex flex-col lg:flex-row items-center justify-between gap-14">
+                    <div class="flex-1">
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-7">
+                            <div
+                                class="h-[136px] rounded-[10px] bg-gradient-to-l from-yellow-color to-red-color opacity-[0.10000000149011612]">
+                            </div>
+                            <figure
+                                class="flex items-center justify-center p-10 rounded-[10px] row-span-2 bg-gradient-to-b from-white to-[#F4F4F4]">
+                                <img src="./img/fresh-1.png" alt="">
+                            </figure>
+                            <figure
+                                class="flex items-center justify-center p-10 rounded-[10px] row-span-2 bg-gradient-to-t from-white to-[#F4F4F4]">
+                                <img src="./img/fresh-2.png" alt="">
+                            </figure>
+                            <div class="h-[136px] rounded-[10px] bg-gradient-to-r from-[#D9D9D9] to-white"></div>
+                        </div>
+                    </div>
+                    <div class="flex-1 flex flex-col gap-5">
+                        <div>
+                            <h2 class="text-[45px] font-extrabold text-dark-color mb-2">Great Tea, Freshly Presented
+                            </h2>
+                            <p class="text-base font-medium leading-7 text-dark-light">The meaning of gong cha is
+                                chanese is to provide the best tea to emperor from all
+                                possessions
+                                . It represents the highest quality and self expectation. Establishing in 2006, Gong cha
+                                had
+                                been deeply appreciated by its custoers because of good words of mouth and unique
+                                customized
+                                service orginated from Taiwan.</p>
+                        </div>
+                        <div>
+                            <h4 class="text-dark-color font-extrabold text-xl mb-2">Unique Taste</h4>
+                            <p class="text-base font-medium leading-7 text-dark-light">A Unique and different style from
+                                other teapots gives a <br> luxurious and minimalist
+                                impression</p>
+                        </div>
+                        <div>
+                            <h4 class="text-dark-color font-extrabold text-xl mb-2">Premium Quality</h4>
+                            <p class="text-base font-medium leading-7 text-dark-light">Premium Quality that makes tea
+                                more <br> elegant and more durable when you use it.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- great tea end -->
     </main>
 
     <footer>
