testimonial section complete with responsive

--- a/index.html
+++ b/index.html
@@ -238,6 +238,76 @@
             </div>
         </section>
         <!-- great tea end -->
+
+        <!-- testimonial start -->
+        <section class="py-10">
+            <div class="container mx-auto">
+                <div class="flex flex-col lg:flex-row lg:justify-between gap-5 
+                    bg-gradient-to-r from-yellow-color to-red-color 
+                    lg:p-20 p-8 rounded-[10px] text-center">
+                    <div class="flex-1">
+                        <h2 class="font-extrabold text-[45px] text-[#F4F4F4]">Meet Our Super <br> Clients</h2>
+                        <p class="font-medium text-base text-[#F4F4F4] leading-[28px] mt-4 mb-4">There are many
+                            variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+                            in some form, by injected humour, or randomised words which don't look even slightly
+                            believable. </p>
+                        <div class="inline-block bg-white border-0 py-4 px-7 text-center rounded-xl mt-2">
+                            <button
+                                class=" text-[20px] text-transparent bg-clip-text bg-gradient-to-r from-yellow-color to-red-color">Show
+                                All</button>
+                        </div>
+                    </div>
+                    <div class="flex-1">
+                        <div class="flex flex-col gap-8 lg:relative">
+                            <div class="flex lg:justify-end opacity-40 w-full">
+                                <div class="relative py-8 px-14 bg-white rounded-lg lg:w-3/4">
+                                    <p class="text-base font-normal leading-7 text-[#777] mb-5">We are providing the
+                                        best
+                                        and suitable home insurance services for the people who are interested to
+                                        treatment
+                                    </p>
+                                    <h4 class="text-base font-bold leading-7 text-dark-color">Ilham Yuda</h4>
+                                    <p class="font-medium leading-7 text-[#5D5A6F]">Businessman</p>
+                                    <figure class="bg-white p-1 rounded-full h-16 w-16 absolute -top-4 -left-4">
+                                        <img src="./img/client.png" alt="">
+                                    </figure>
+                                </div>
+                            </div>
+                            <div
+                                class="lg:absolute lg:left-0 lg:top-1/2 lg:-translate-x-28 lg:-translate-y-[50%] flex lg:justify-end lg:z-10">
+                                <div class="relative py-8 px-14 bg-white rounded-lg lg:w-3/4">
+                                    <p class="text-base font-normal leading-7 text-[#777] mb-5">We are providing the
+                                        best
+                                        and suitable home insurance services for the people who are interested to
+                                        treatment
+                                    </p>
+                                    <h4 class="text-base font-bold leading-7 text-dark-color">Ilham Yuda</h4>
+                                    <p class="font-medium leading-7 text-[#5D5A6F]">Businessman</p>
+                                    <figure class="bg-white p-1 rounded-full h-16 w-16 absolute -top-4 -left-4">
+                                        <img src="./img/client.png" alt="">
+                                    </figure>
+                                </div>
+                            </div>
+                            <div class="flex lg:justify-end opacity-40">
+                                <div class="relative py-8 px-14 bg-white rounded-lg lg:w-3/4">
+                                    <p class="text-base font-normal leading-7 text-[#777] mb-5">We are providing the
+                                        best
+                                        and suitable home insurance services for the people who are interested to
+                                        treatment
+                                    </p>
+                                    <h4 class="text-base font-bold leading-7 text-dark-color">Ilham Yuda</h4>
+                                    <p class="font-medium leading-7 text-[#5D5A6F]">Businessman</p>
+                                    <figure class="bg-white p-1 rounded-full h-16 w-16 absolute -top-4 -left-4">
+                                        <img src="./img/client.png" alt="">
+                                    </figure>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- testimonial end -->
     </main>
 
     <footer>
