--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
         <!-- testimonial start -->
         <section class="py-10">
             <div class="container mx-auto">
-                <div class="flex flex-col lg:flex-row lg:justify-between gap-5 
+                <div class="flex flex-col lg:flex-row lg:justify-between gap-10 
                     bg-gradient-to-r from-yellow-color to-red-color 
-                    lg:p-20 p-8 rounded-[10px] text-center">
+                    lg:p-20 p-8 rounded-[10px] lg:items-center">
                     <div class="flex-1">
                         <h2 class="font-extrabold text-[45px] text-[#F4F4F4]">Meet Our Super <br> Clients</h2>
                         <p class="font-medium text-base text-[#F4F4F4] leading-[28px] mt-4 mb-4">There are many
