--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                             variations of passages of Lorem Ipsum available, but the majority have suffered alteration
                             in some form, by injected humour, or randomised words which don't look even slightly
                             believable. </p>
-                        <div class="inline-block bg-white border-0 py-4 px-7 text-center rounded-xl mt-2">
+                        <div class="inline-block bg-white border-0 py-4 px-8 text-center rounded-xl mt-2">
                             <button
                                 class=" text-[20px] text-transparent bg-clip-text bg-gradient-to-r from-yellow-color to-red-color">Show
                                 All</button>
@@ -308,6 +308,63 @@
             </div>
         </section>
         <!-- testimonial end -->
+
+        <!-- news event start -->
+        <section class="py-20">
+            <div class="container mx-auto">
+                <div class="text-center flex flex-col gap-5 items-center justify-center py-4">
+                    <h2 class="text-dark-color text-4xl font-extrabold">News & Events</h2>
+                    <p class="lg:px-52 text-base text-dark-light leading-7">There are many variations of passages of
+                        Lorem Ipsum available, but the majority have suffered alteration in some form, by injected
+                        humour, or randomised words which don't look even slightly believable. </p>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 mt-5">
+                    <div class="card shadow-xl border border-[#D2D2D2] rounded-[10px] pt-8">
+                        <figure>
+                            <img src="./img/news-1.png" alt="Shoes" />
+                        </figure>
+                        <div class="card-body">
+                            <p class="text-dark-light font-medium leading-7">Feb 05, 2027</p>
+                            <h2 class="card-title text-xl font-extrabold">
+                                Collecting 8 points for <br> discount
+                            </h2>
+                            <p class="text-dark-light font-medium leading-7">There are many variations of passages of
+                                Lorem Ipsum available.</p>
+                            <a class="text-dark-color font-bold leading-7" href="#">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="card shadow-xl border border-[#D2D2D2] rounded-[10px] pt-8">
+                        <figure>
+                            <img src="./img/news-2.png" alt="Shoes" />
+                        </figure>
+                        <div class="card-body">
+                            <p class="text-dark-light font-medium leading-7">Feb 05, 2027</p>
+                            <h2 class="card-title text-xl font-extrabold">
+                                Collecting 8 points for <br> discount
+                            </h2>
+                            <p class="text-dark-light font-medium leading-7">There are many variations of passages of
+                                Lorem Ipsum available.</p>
+                            <a class="text-dark-color font-bold leading-7" href="#">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="card shadow-xl border border-[#D2D2D2] rounded-[10px] pt-8">
+                        <figure>
+                            <img src="./img/news-3.png" alt="Shoes" />
+                        </figure>
+                        <div class="card-body">
+                            <p class="text-dark-light font-medium leading-7">Feb 05, 2027</p>
+                            <h2 class="card-title text-xl font-extrabold">
+                                Collecting 8 points for <br> discount
+                            </h2>
+                            <p class="text-dark-light font-medium leading-7">There are many variations of passages of
+                                Lorem Ipsum available.</p>
+                            <a class="text-dark-color font-bold leading-7" href="#">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- news event end -->
     </main>
 
     <footer>
